Extensive additional JavaDocs for VTable